// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SuspenseQueryBoundary should render a custom error fallback 1`] = `
<div>
  <button
    type="button"
  >
    Try again
  </button>
</div>
`;

exports[`SuspenseQueryBoundary should render a custom suspense fallback 1`] = `
<div>
  <div>
    Loading blueprints
  </div>
</div>
`;

exports[`SuspenseQueryBoundary should render the default error fallback 1`] = `
<div>
  <div
    class="flex min-h-[240px] flex-col items-center justify-center gap-3 text-sm text-neutral-subtle"
  >
    <span>
      Unable to load 
      catalog
      .
    </span>
    <button
      class="inline-flex items-center shrink-0 font-medium transition-[background-color,transform] active:scale-[0.97] disabled:scale-100 disabled:pointer-events-none disabled:border disabled:border-neutral disabled:text-neutral-disabled disabled:bg-surface-neutral-component focus-visible:[&:not(:active)]:outline-2 outline-0 select-none outline-neutral-strong text-sm h-8 px-2.5 gap-x-1.5 rounded-md text-neutral-subtle hover:bg-surface-neutral-subtle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="fa-regular fa-rotate-right text-xs"
      />
      Retry
    </button>
  </div>
</div>
`;

exports[`SuspenseQueryBoundary should render the default suspense fallback 1`] = `
<div>
  <div
    class="flex min-h-[240px] items-center justify-center gap-2 text-sm text-neutral-subtle"
  >
    <i
      aria-hidden="true"
      class="fa-regular fa-loader animate-spin"
    />
    Loading 
    catalog
    …
  </div>
</div>
`;
